apps/shared/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    internal-services: "true"
